--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ cryptography==41.0.7
 dnspython==2.8.0
 ecdsa==0.19.1
 email-validator==2.3.0
+et_xmlfile==2.0.0
 fastapi==0.128.0
 flower==2.0.1
 greenlet==3.3.0
@@ -23,7 +24,10 @@ httptools==0.7.1
 humanize==4.15.0
 idna==3.11
 kombu==5.6.2
+numpy==2.4.1
+openpyxl==3.1.5
 packaging==25.0
+pandas==2.3.3
 passlib==1.7.4
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
@@ -52,3 +56,4 @@ vine==5.1.0
 watchfiles==1.1.1
 wcwidth==0.2.14
 websockets==15.0.1
+xlsxwriter==3.2.9
